# TechWorkshop-L300-AI-Apps-and-agents

.devcontainer/: devcontainer.json
docs/01_deploy_configure_resources/: 01_01.md  01_02.md
docs/02_implement_multimodal_ai_shopping_assistant/: 02_02.md
docs/03_extend_shopping_assistant_with_a2a/: 03_01.md  03_02.md
docs/04_observability_ai_foundry/: 04_01.md  04_02.md  04_03.md  04_observability_ai_foundry.md
docs/06_red_teaming_troubleshooting/: 06_01.md  06_02.md  06_03.md
src/: Dockerfile  chat_app.py  env_sample.txt  pyproject.toml  requirements.txt
src/app/agents/: agent_initializer.py  agent_processor.py  cartManagerAgent_initializer.py  customerLoyaltyAgent_initializer.py  handoffAgent_initializer.py  interiorDesignAgent_initializer.py  inventoryAgent_initializer.py  shopperAgent_initializer.py
src/app/tools/: aiSearchTools.py  discountLogic.py  imageUnderstandingTool.py  singleAgentExample.py  understandImage.py
src/infra/: DeployAzureResources.bicep
src/pipelines/: ingest_to_cosmos.py
src/utils/: env_utils.py
