[project]
name = "src"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-framework[azure-ai,azure-ai-search]==1.0.0rc2",
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "azure-ai-agents==1.2.0b5",
    "azure-ai-contentsafety==1.0.0",
    "azure-ai-evaluation[redteam]==1.15.3",
    "azure-ai-projects==2.0.0b3",
    "azure-core==1.38.2",
    "azure-cosmos==4.14.3",
    "azure-identity==1.25.2",
    "azure-monitor-opentelemetry==1.8.3",
    "azure-monitor-opentelemetry-exporter==1.0.0b45",
    "azure-storage-blob==12.28.0",
    "certifi==2026.2.25",
    "click==8.3.1",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "fastapi==0.128.0",
    "h11==0.16.0",
    "httpx==0.28.1",
    "idna==3.11",
    "isodate==0.7.2",
    "jinja2==3.1.6",
    "mcp==1.25.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "openai==2.14.0",
    "openai-agents==0.8.3",
    "opentelemetry-api==1.39.1",
    "opentelemetry-distro==0.60b1",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-instrumentation-openai-v2==2.3b0",
    "opentelemetry-sdk==1.39.1",
    "orjson==3.11.7",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "pydantic==2.12.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "websockets==16.0",
]
